feat: v2.0.0 - multilingual knowledge base expansion, agent modes, guides, skills, and wiki updates