@@ -38,6 +38,7 @@ contribution:
   how_to_contribute: "Submit a PR with changes and update the changelog"
   review_process: "Changes are reviewed by category maintainers before merge"
 ---
+
 # Ява
 Java — это статически типизированный объектно-ориентированный язык программирования, созданный Джеймсом Гослингом из Sun Microsystems и выпущенный в 1995 году. Его философия проектирования — «напиши один раз, запускай где угодно» (WORA) — достигается с помощью виртуальной машины Java (JVM), которая позволяет скомпилированному коду Java работать на любой платформе, имеющей реализацию JVM. Java — один из наиболее широко используемых языков программирования в истории, на котором базируются корпоративные серверные части, приложения Android, системы больших данных и финансовые услуги.
 Несмотря на то, что Java уже почти 30 лет, она продолжает развиваться. Современная Java (версии 17+) включает в себя записи, запечатанные классы, сопоставление с образцом, виртуальные потоки и растущую экосистему, конкурирующую с новыми языками.
@@ -54,7 +55,7 @@ Java — это статически типизированный объектн
 | Ограничение | Подробности | Типичный обходной путь |
 |-----------|---------|-------------------|
 | **Многословие** | Требуется больше шаблонов, чем Python, Kotlin или Go | Используйте Lombok, записи (Java 16+) и современные IDE |
-| **Использование памяти** | Накладные расходы JVM означают больший объем базовой памяти | Настройте флаги JVM; использовать собственные образы GraalVM для небольших развертываний |
+| **Использование памяти** | Накладные расходы JVM означают больший объем базовой памяти | Настроить флаги JVM; использовать собственные образы GraalVM для небольших развертываний |
 | **Время запуска** | Разогрев JVM может быть медленным для недолговечных процессов | Собственный образ GraalVM или использование C/Go для инструментов CLI |
 | **Проверенные исключения** | Принудительная обработка исключений, которые невозможно восстановить | Используйте непроверенные исключения или шаблон`Optional`|
 | **Нет типов значений** | Все является объектом (до проекта Валгалла) | Использовать примитивно-специализированные коллекции (Eclipse Collections, Trove) |
@@ -668,7 +669,7 @@ ENTRYPOINT ["java", "-jar", "app.jar"]
 ### Инструменты сборки
 | Инструмент | Цель | Заметки |
 |------|---------|-------|
-| **Мавен** | Автоматизация сборки + управление зависимостями | на основе XML (`pom.xml`); отраслевой стандарт для предприятий |
+| **Мавен** | Автоматизация сборки + управление зависимостями | На основе XML (`pom.xml`); отраслевой стандарт для предприятий |
 | **Грейдл** | Автоматизация сборки + управление зависимостями | Groovy/Kotlin DSL; быстрее для крупных проектов; используется Android |
 ### Фреймворки
 | Рамочная | Домен | Описание |
@@ -702,7 +703,7 @@ ENTRYPOINT ["java", "-jar", "app.jar"]
 | Ява 8 | 2014 | **LTS** — Lambdas, Stream API, необязательные методы по умолчанию. До сих пор широко используется. |
 | Ява 11 | 2018 | **LTS** — API HTTP-клиента,`var`для локальных переменных, средство запуска однофайлового исходного кода |
 | Ява 17 | 2021 | **LTS** — Запечатанные классы, сопоставление с образцом для `instanceof`, записи, текстовые блоки |
-| Ява 21 | 2023 | **LTS** — **Виртуальные потоки** (Project Loom), сопоставление шаблонов для`switch`, шаблоны записи |
+| Ява 21 | 2023 | **LTS** — **Виртуальные потоки** (Project Loom), сопоставление шаблонов для `switch`, шаблоны записи |
 | Ява 25 | 2025 | **LTS** — Строковые шаблоны, дальнейшее сопоставление с образцом, API внешних функций |
 **Версии LTS** (долгосрочная поддержка) получают обновления в течение многих лет. Для производства используйте Java 21 или более позднюю версию.
 ---
@@ -717,6 +718,377 @@ ENTRYPOINT ["java", "-jar", "app.jar"]
 | Микросервисы | Spring Boot + облачные фреймворки | Выбирайте более простые услуги |
 | Простые скрипты | Слишком много церемоний | Питон, оболочка |
 | Инструменты CLI | Медленный запуск | Вперёд, Раст |
+---
+
+## Синтетические вопросы и ответы
+### Q1: В чем разница между`==`и`.equals()`в Java?
+**A:**`==`сравнивает ссылки на объекты (идентичность) — он проверяет, указывают ли две переменные на один и тот же объект в памяти. `.equals()`сравнивает содержимое объекта (равенство значений). Для примитивов (`int`,`double`)`==`сравнивает значения напрямую. Для объектов (включая `String`) всегда используйте`.equals()`для сравнения содержимого. Единственным исключением является сравнение с `null`, где`==`является правильным.
+```java
+String a = new String("hello");
+String b = new String("hello");
+System.out.println(a == b);       // false — different objects
+System.out.println(a.equals(b));  // true — same content
+
+// String pool — literals are interned
+String c = "hello";
+String d = "hello";
+System.out.println(c == d);       // true — same pooled object
+
+// Always use .equals() for value comparison, or Objects.equals() for null-safe comparison
+Objects.equals(a, b);  // Handles nulls without NPE
+```
+
+### Вопрос 2: Как работает сборщик мусора JVM и какой из них мне следует использовать?
+**О:** Сборщик мусора автоматически освобождает память у объектов, которые больше не доступны. Современные JVM (21+) предлагают несколько сборщиков: G1 (по умолчанию, сбалансированный), ZGC (сверхмалое время паузы, <1 мс) и Shenandoah (малая пауза, OpenJDK). Для большинства приложений подойдет значение G1 по умолчанию. Для служб, чувствительных к задержке, используйте ZGC (`-XX:+UseZGC`). Для пакетной обработки, ориентированной на производительность, используйте Parallel GC (`-XX:+UseParallelGC`).
+```bash
+# JVM flags for GC tuning
+java -XX:+UseZGC -Xmx4g -Xms4g -jar app.jar
+
+# Monitor GC activity
+java -Xlog:gc*:file=gc.log:time,tags:filecount=5,filesize=10M -jar app.jar
+```
+
+### Вопрос 3: Когда следует использовать`Stream API`по сравнению с традиционными циклами?
+**A:** Используйте потоки, когда операция представляет собой четкий конвейер (фильтрация, сопоставление, сокращение). Они лучше выражают намерения и легко распараллеливаются с помощью`.parallelStream()`. Используйте традиционные циклы для простых итераций, когда вам нужно изменить внешнее состояние, когда производительность имеет решающее значение (потоки имеют накладные расходы) или когда логика включает в себя сложный поток управления (прерывание, продолжение, множественные возвраты). Избегайте потоков для простых операций `for-each`.
+```java
+// Stream — clear pipeline, easy to read
+List<String> names = people.stream()
+    .filter(p -> p.age() > 18)
+    .sorted(Comparator.comparing(Person::name))
+    .map(Person::name)
+    .toList();
+
+// Traditional loop — better for complex logic or side effects
+int maxAge = 0;
+String oldestName = null;
+for (Person p : people) {
+    if (p.age() > maxAge) {
+        maxAge = p.age();
+        oldestName = p.name();
+    }
+}
+```
+
+### Вопрос 4. Что такое записи, запечатанные классы и сопоставление с образцом в современной Java?
+**A:** Записи (Java 16) являются неизменяемыми носителями данных — они автоматически генерируют конструкторы, геттеры,`equals`,`hashCode`и`toString`. Запечатанные классы (Java 17) ограничивают классы, которые могут их расширять, что полезно для моделирования иерархий конечных типов. Сопоставление с образцом (Java 21) позволяет выражениям`switch`деструктурировать типы, записи и значения, заменяя подробные цепочки `instanceof`.
+```java
+// Record — immutable data class
+public record Point(int x, int y) {
+    // Compact constructor for validation
+    public Point {
+        if (x < 0 || y < 0) throw new IllegalArgumentException();
+    }
+}
+
+// Sealed interface + pattern matching
+public sealed interface Shape permits Circle, Rectangle, Triangle {}
+public record Circle(double radius) implements Shape {}
+public record Rectangle(double width, double height) implements Shape {}
+public record Triangle(double base, double height) implements Shape {}
+
+// Pattern matching switch (Java 21)
+static double area(Shape shape) {
+    return switch (shape) {
+        case Circle(var r)       -> Math.PI * r * r;
+        case Rectangle(var w, var h) -> w * h;
+        case Triangle(var b, var h) -> 0.5 * b * h;
+    };
+}
+```
+
+### Вопрос 5: Как правильно обрабатывать проверенные и непроверенные исключения?
+**A:** Проверяемые исключения (`IOException`,`SQLException`) должны быть объявлены в`throws`или перехвачены — они представляют собой восстанавливаемые условия, о которых должен знать вызывающий объект. Непроверенные исключения (подклассы `RuntimeException`, такие как `NullPointerException`, `IllegalArgumentException`) представляют собой ошибки программирования. Лучшая практика: используйте проверенные исключения с осторожностью (они создают связь), отдавайте предпочтение`Optional`для ожидаемого отсутствия и обертывайте проверенные исключения в непроверенные при пересечении границ API.
+```java
+// Prefer Optional over checked exception for expected absence
+public Optional<User> findUser(String id) {
+    return Optional.ofNullable(userRepository.findById(id));
+}
+
+// Wrap checked exceptions for cleaner APIs
+public User getUser(String id) {
+    try {
+        return findUser(id).orElseThrow(
+            () -> new UserNotFoundException("User not found: " + id));
+    } catch (IOException e) {
+        throw new UncheckedIOException(e);
+    }
+}
+
+// Try-with-resources — automatic resource cleanup
+try (var conn = dataSource.getConnection();
+     var stmt = conn.prepareStatement("SELECT * FROM users WHERE id = ?")) {
+    stmt.setString(1, id);
+    try (var rs = stmt.executeQuery()) {
+        if (rs.next()) return mapUser(rs);
+    }
+}
+```
+
+---
+
+## Решение проблем с цепочкой мыслей
+### Проблема 1. Создание потокобезопасного конвейера производитель-потребитель
+**Постановка задачи.** Спроектируйте на Java конвейер производитель-потребитель, в котором несколько производителей генерируют рабочие элементы, несколько потребителей обрабатывают их одновременно, а система поддерживает плавное завершение работы с опорожнением оставшихся элементов.
+**Шаг 1. Поймите проблему:**
+Нам нужны: (1) ограниченная очередь для буферизации рабочих элементов между производителями и потребителями, (2) несколько потоков-производителей, добавляющих элементы, (3) несколько потоков-потребителей, обрабатывающих элементы, (4) механизм сигнализации о завершении работы и опустошения оставшихся элементов. Java`BlockingQueue`специально создан для этого.
+**Шаг 2. Определите подход:**
+- Используйте`ArrayBlockingQueue`(ограниченный), чтобы предотвратить неограниченный рост памяти.
+- Используйте шаблон ядовитой таблетки для сигнализации об отключении.
+- Используйте`ExecutorService`для управления пулом потоков.
+- Используйте `CountDownLatch`, чтобы дождаться завершения слива всех потребителей.
+**Шаг 3. Реализация решения:**
+```java
+import java.util.concurrent.*;
+
+public class Pipeline<T> {
+    private final BlockingQueue<T> queue;
+    private final ExecutorService producers;
+    private final ExecutorService consumers;
+    private final CountDownLatch shutdownLatch;
+    private static final Object POISON_PILL = new Object();
+
+    public Pipeline(int producerCount, int consumerCount, int queueCapacity) {
+        this.queue = new ArrayBlockingQueue<>(queueCapacity);
+        this.producers = Executors.newFixedThreadPool(producerCount);
+        this.consumers = Executors.newFixedThreadPool(consumerCount);
+        this.shutdownLatch = new CountDownLatch(consumerCount);
+    }
+
+    public void start(Function<T, Void> processor) {
+        // Start consumers
+        for (int i = 0; i < shutdownLatch.getCount(); i++) {
+            final int id = i;
+            consumers.submit(() -> {
+                try {
+                    while (true) {
+                        T item = queue.poll(1, TimeUnit.SECONDS);
+                        if (item == null) continue;
+                        if (item == POISON_PILL) break;
+                        processor.apply(item);
+                    }
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                } finally {
+                    shutdownLatch.countDown();
+                }
+            });
+        }
+    }
+
+    public void submit(T item) throws InterruptedException {
+        queue.put(item);  // Blocks if queue is full
+    }
+
+    public void shutdown() throws InterruptedException {
+        // Send poison pills — one per consumer
+        for (int i = 0; i < shutdownLatch.getCount(); i++) {
+            queue.put((T) POISON_PILL);
+        }
+        // Wait for all items to be processed
+        shutdownLatch.await(30, TimeUnit.SECONDS);
+        producers.shutdown();
+        consumers.shutdown();
+    }
+}
+```
+
+**Шаг 4. Проверка и оптимизация:**
+— Ограниченная очередь предотвращает OOM:`ArrayBlockingQueue(1000)`ограничивает память.
+- Схема с таблетками с ядом: каждый потребитель аккуратно выходит из магазина после получения таблетки.
+-`poll(1, SECONDS)`с тайм-аутом предотвращает бесконечную блокировку потребителей, если производители работают медленно.
+- Производство: используйте`LinkedBlockingQueue`для неограниченных конвейеров или`Disruptor`(LMAX) для конвейеров со сверхнизкой задержкой.
+### Проблема 2: реализация пользовательского валидатора на основе аннотаций
+**Постановка задачи.** Создайте структуру проверки с использованием пользовательских аннотаций. Пользователи аннотируют поля с помощью `@NotNull`, `@Min(0)`, `@Max(100)`,`@Size(min=1, max=50)`и вызывают `Validator.validate(obj)`, чтобы получить список нарушений.
+**Шаг 1. Поймите проблему:**
+Нам нужны: (1) пользовательские аннотации с параметрами, (2) валидатор на основе отражения, который считывает аннотации во время выполнения, (3) объект результата, содержащий все ошибки проверки. Это демонстрирует возможности обработки и отражения аннотаций Java.
+**Шаг 2. Определите подход:**
+- Определите аннотации с помощью`@Retention(RUNTIME)`и `@Target(FIELD)`.
+- Используйте`Class.getDeclaredFields()`для перебора полей.
+- Используйте`Field.getAnnotation()`для чтения значений аннотаций.
+- Сравните значения полей с ограничениями аннотаций.
+- Собрать нарушения в список.
+**Шаг 3. Реализация решения:**
+```java
+// Annotations
+@Retention(RetentionPolicy.RUNTIME)
+@Target(ElementType.FIELD)
+@interface NotNull { String message() default "must not be null"; }
+
+@Retention(RetentionPolicy.RUNTIME)
+@Target(ElementType.FIELD)
+@interface Min { long value(); String message() default "must be >= {value}"; }
+
+@Retention(RetentionPolicy.RUNTIME)
+@Target(ElementType.FIELD)
+@interface Max { long value(); String message() default "must be <= {value}"; }
+
+@Retention(RetentionPolicy.RUNTIME)
+@Target(ElementType.FIELD)
+@interface Size { int min() default 0; int max() default Integer.MAX_VALUE; }
+
+// Violation record
+record Violation(String field, String message) {}
+
+// Validator
+public class Validator {
+    public static List<Violation> validate(Object obj) {
+        List<Violation> violations = new ArrayList<>();
+        for (Field field : obj.getClass().getDeclaredFields()) {
+            field.setAccessible(true);
+            try {
+                Object value = field.get(obj);
+                String name = field.getName();
+
+                if (field.isAnnotationPresent(NotNull.class) && value == null) {
+                    violations.add(new Violation(name, "must not be null"));
+                }
+
+                if (value instanceof Number num) {
+                    Min min = field.getAnnotation(Min.class);
+                    if (min != null && num.longValue() < min.value()) {
+                        violations.add(new Violation(name,
+                            "must be >= " + min.value()));
+                    }
+                    Max max = field.getAnnotation(Max.class);
+                    if (max != null && num.longValue() > max.value()) {
+                        violations.add(new Violation(name,
+                            "must be <= " + max.value()));
+                    }
+                }
+
+                if (value instanceof String str) {
+                    Size size = field.getAnnotation(Size.class);
+                    if (size != null) {
+                        if (str.length() < size.min() || str.length() > size.max()) {
+                            violations.add(new Violation(name,
+                                "length must be between " + size.min() + " and " + size.max()));
+                        }
+                    }
+                }
+            } catch (IllegalAccessException e) {
+                throw new RuntimeException(e);
+            }
+        }
+        return violations;
+    }
+}
+
+// Usage
+public class UserForm {
+    @NotNull
+    String name;
+    @Min(0) @Max(150)
+    int age;
+    @Size(min = 5, max = 100)
+    String email;
+}
+
+List<Violation> errors = Validator.validate(new UserForm(null, -1, "ab"));
+// [Violation[field=name, message=must not be null],
+//  Violation[field=age, message=must be >= 0],
+//  Violation[field=email, message=length must be between 5 and 100]]
+```
+
+**Шаг 4. Проверка и оптимизация:**
+- Накладные расходы на отражение: приемлемы для проверки (вызываются один раз для каждого запроса). Для «горячих» путей выполните поиск полей в кэше или используйте обработку аннотаций во время компиляции (например, Hibernate Validator).
+— Расширяемость: добавляйте новые аннотации, создавая аннотацию + блок-обработчик в `validate()`.
+- Производство: используйте`jakarta.validation`(Bean Validation 3.0) — он делает все это и многое другое с обработкой во время компиляции с помощью процессоров аннотаций.
+### Проблема 3. Создайте HTTP-клиент с ограниченной скоростью и повторной попыткой
+**Постановка задачи.** Создайте оболочку HTTP-клиента, которая автоматически повторяет неудачные запросы с экспоненциальной задержкой, соблюдает ограничения скорости и поддерживает разрыв цепи (прекращает вызов службы, выполняющей сбой).
+**Шаг 1. Поймите проблему:**
+Нам нужны: (1) логика повторных попыток с экспоненциальной задержкой и джиттером, (2) ограничение скорости, чтобы избежать перегрузки целевой службы, (3) шаблон автоматического выключателя — после N последовательных сбоев прекратить вызов службы на период восстановления. Это три компонуемые проблемы.
+**Шаг 2. Определите подход:**
+- Используйте`java.net.http.HttpClient`(Java 11+) в качестве базового клиента.
+— Реализовать повторную попытку как обертку с`Thread.sleep`для отсрочки.
+- Используйте`Semaphore`для ограничения скорости (или`java.time`для корзины токенов).
+- Реализуйте автоматический выключатель как конечный автомат: ЗАКРЫТО → ОТКРЫТО → HALF_OPEN.
+**Шаг 3. Реализация решения:**
+```java
+import java.net.http.*;
+import java.time.Duration;
+import java.util.concurrent.*;
+import java.util.concurrent.atomic.*;
+
+public class ResilientClient {
+    private final HttpClient client;
+    private final int maxRetries;
+    private final Semaphore rateLimiter;
+    private final AtomicInteger consecutiveFailures;
+    private final AtomicLong openUntil;
+    private final int failureThreshold;
+    private final long cooldownMs;
+
+    public ResilientClient(int maxRetries, int requestsPerSecond,
+                           int failureThreshold, long cooldownMs) {
+        this.client = HttpClient.newBuilder()
+            .connectTimeout(Duration.ofSeconds(10))
+            .build();
+        this.maxRetries = maxRetries;
+        this.rateLimiter = new Semaphore(requestsPerSecond);
+        this.consecutiveFailures = new AtomicInteger(0);
+        this.openUntil = new AtomicLong(0);
+        this.failureThreshold = failureThreshold;
+        this.cooldownMs = cooldownMs;
+
+        // Replenish semaphore permits every second
+        Executors.newSingleThreadScheduledExecutor(r -> {
+            Thread t = new Thread(r, "rate-limiter");
+            t.setDaemon(true);
+            return t;
+        }).scheduleAtFixedRate(() -> {
+            int drain = requestsPerSecond - rateLimiter.availablePermits();
+            if (drain > 0) rateLimiter.release(drain);
+        }, 1, 1, TimeUnit.SECONDS);
+    }
+
+    public HttpResponse<String> send(HttpRequest request) throws Exception {
+        // Circuit breaker check
+        if (System.currentTimeMillis() < openUntil.get()) {
+            throw new CircuitOpenException("Circuit breaker is open");
+        }
+
+        Exception lastException = null;
+        for (int attempt = 0; attempt <= maxRetries; attempt++) {
+            try {
+                rateLimiter.acquire();  // Wait for rate limit permit
+                HttpResponse<String> response = client.send(request,
+                    HttpResponse.BodyHandlers.ofString());
+
+                if (response.statusCode() >= 500) {
+                    throw new ServerException("HTTP " + response.statusCode());
+                }
+
+                // Success — reset failure counter
+                consecutiveFailures.set(0);
+                return response;
+
+            } catch (Exception e) {
+                lastException = e;
+                int failures = consecutiveFailures.incrementAndGet();
+
+                if (failures >= failureThreshold) {
+                    openUntil.set(System.currentTimeMillis() + cooldownMs);
+                    throw new CircuitOpenException(
+                        "Circuit opened after " + failures + " failures");
+                }
+
+                if (attempt < maxRetries) {
+                    long delay = (long) Math.pow(2, attempt) * 100;
+                    long jitter = ThreadLocalRandom.current().nextLong(0, delay / 2);
+                    Thread.sleep(delay + jitter);
+                }
+            }
+        }
+        throw lastException;
+    }
+}
+```
+
+**Шаг 4. Проверка и оптимизация:**
+- Экспоненциальная задержка с джиттером предотвращает громоподобное стадо (все повторные попытки выполняются одновременно).
+- Автоматический выключатель: после последовательных сбоев`failureThreshold`цепь размыкается для`cooldownMs`— запросы не отправляются, защищая неисправную службу.
+- Ограничитель скорости:`Semaphore`с ограничением пропускной способности периодического пополнения.
+— Производство: используйте`resilience4j`— он предоставляет все три шаблона (повторную попытку, ограничитель скорости, автоматический выключатель) с соответствующими реализациями, метриками и интеграцией Spring Boot.
 ---
 
 ## Краткое содержание
